fix: oval avatar caused by text overflow

--- a/app/js/components/app/styles.scss
+++ b/app/js/components/app/styles.scss
@@ -62,6 +62,7 @@ div.menu {
 
         .influencerName {
             margin-left: 1rem;
+            max-width: 12rem;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
